tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__QuantumEntangled-0qhnm9tYQfmKHzWPUlb8iw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15805455431340850315,
  "prerequisites": [
    2535
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make an entangled pair for usage in the quantum ring, put the Singularity and Enderpearl Dust on the ground, then use an explosion (Tiny TNT works well) to create two Quantum Entangled Singularities.\n\n[note]QESs are each a unique pair and will only work with one another.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quantum Entangled Singularities",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2535
  ],
  "rewards": [],
  "tasks": []
}
