tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__QuantumStorage-AAAAAAAAAAAAAAAAAAAB0g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 466,
  "prerequisites": [
    2656,
    2467
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now you §ocould§r connect Quantum Chests to your ME System with Storage Buses, and maybe you are already doing that. But why not use all your new technology to make a Quantum Storage Cell?\n\nIt only takes a single item type, but you can store more than a billion items! That surely must be enough, right? RIGHT?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quantum Storage",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2656,
    2467
  ],
  "rewards": [],
  "tasks": []
}
