tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__RecipePatterns-AAAAAAAAAAAAAAAAAAAFLw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1327,
  "prerequisites": [
    1328
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Save patterns onto these to do autocrafting. They go into molecular assemblers and ME interfaces.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Recipe Patterns",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1328
  ],
  "rewards": [],
  "tasks": []
}
