tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__ShortGuideABasic-AAAAAAAAAAAAAAAAAAAKwQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2753,
  "prerequisites": [
    184
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you've unlocked AE2, but don't know how to use it? Not to worry, that's what this questline is for. For a basic (and not completely useless) ME system, make the items on the right first. After you go through the quests to get them normally of course.\n\n[note]You could technically make one with an ME Chest, but there's no advantage over using a regular chest.[/note]\n\nConnect power to the Energy Acceptor, place the ME Drive next to it, place a Fluix Cable on top of the ME Drive connect the ME Terminal to the cable. Just put in the Storage cells, and you're done! Remember you need a Network Tool to see how much power it actually uses. Also, it lets you pick up stuff easier.\n\nTo save power, let's do a little extra work. Place the Pressure Plate two spaces in front of the ME Terminal, place redstone next to it and beside the Energy Acceptor. Remove the EA and place a Fluix Cable there, and then place the ME Toggle Bus between the Drive and where the Energy Acceptor will be. Then plunk that back down and re-power it. This will cause it to only connect (and thus use power) when you stand on the plate. This tiny network uses about 38 EU by itself, so you should understand that an ME system is not cheap either in materials or power.\n\nYou should make either 1k or 4k storage cells to put into your ME Drive.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Short Guide - A Basic AE2 System",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    184
  ],
  "rewards": [],
  "tasks": []
}
