tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__ShortGuideAutocr-AAAAAAAAAAAAAAAAAAAKww==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2755,
  "prerequisites": [
    1312
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This is the main purpose of AE2, so let's get to it. Plunk down the Crafting Storage and Molecular Assembler, connect the Pattern Terminal to a cable, and attach the ME Interface to the MA (make sure it has power from another side). You could run it without a ME Interface, but you can only do one recipe then. Place a Blank Pattern in the Pattern Terminal, and add the recipe for a Crafting Table, then click the arrow to save it to the pattern. Put this in the ME Interface and you can now request a craft of it. (if the items are in the network, otherwise it'll fail obviously)\n\nFor processing patterns (machines, anything not regular 3x3 crafting) click the button on the right. You'll need to specify all I/O for it yourself. You can use this on an ME Interface on a furnace (for example), combined with an ME Import Bus to collect the results. If it's a machine that auto-ejects (like multis) you can use a ME Interface to collect the results much faster (and with less lag).",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Short Guide - Autocrafting",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1312
  ],
  "rewards": [],
  "tasks": []
}
