tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__ShortGuideExtern-AAAAAAAAAAAAAAAAAAAKwg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2754,
  "prerequisites": [
    1303
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Drawers are great, right? Well, let's connect your ME system to a bank of them. Set up some drawers nearby with a controller attached. Then place an ME Storage Bus against the controller and set the priority to +1. This will prioritize I/O to the drawer controller. Lock your drawers before they fill with random stuff. Now you have access to the whole thing! Great for the results of mining, and anything else you have thousands of, while keeping your ME system relatively empty.\n\nYou can also connect to chests and other things if you want. You can use an Ender Chest to send stuff into your network, which will then send it to the drawers, but you'll have stuff entering and exiting constantly, so it'll mess up your view in the Terminal. You can use filtered view cells, or process them before they go into your ME network (or in a different one) and/or send them to the DC directly via another EC. It depends on what you want to do and what it is.\n\n[warn]Using the drawer controller with large amounts of I/O will tank TPS! If you're on a server, do not use drawer cubes, or expect the possibility of it being deleted or you getting banned.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Short Guide - External Storage",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1303
  ],
  "rewards": [],
  "tasks": []
}
